--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,228 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+header{
+
+  margin-top: 1em;
+  color: orange;
+} 
+
+h1{
+  text-align: center;
+  margin-bottom: 0.5em;
+ 
+}
+
+
+
+/* ol {
+  list-style: none;
+  margin: 0 50px;
+} */
+
+.hero {
+ text-align: center;
+ /* margin: 40px; */
+ color: orange;
+ font-size: 60%;
+}
+
+#form {
+  width:30em;
+  height: 3em;
+  font-size: medium;
+  border-radius:15px;
+}
+
+
+form{
+ margin-top: 0%;
+ margin-bottom:15%;
+ margin-left:27%;
+
+}
+
+.btn{
+ background-color: antiquewhite;
+ border:1px;
+
+}
+
+.btn:hover{
+ background-color:burlywood;
+ border:none;
+
+}
+
+#button {
+  width: 7em;
+  height: 3em;
+  font-size: medium;
+  border:1px;
+  border-radius:15px;
+}
+
+#button:hover {
+background-color: #fb8b24;
+}
+
+.results {
+  padding-top:5%;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:space-around;
+  
+
+}
+
+
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: #edf2f4;
+  color: black;
+  font-style: italic;
+  justify-content:space-around;
+  width: 65%;
+  font-size: smaller;
+  padding-left:30px;
+  padding-right:30px;
+  text-align:center;
+  margin-top:15px;
+  margin-left:30px;
+  margin-bottom:15px;
+  border:none;
+  border-radius:15px;
+ 
+}
+
+.descr {
+  padding-top: 30px;
+  overflow: auto;
+  height: 38vh;
+  flex-basis: 60%;
+
+}
+
+.card>img:hover{
+transform: scale(0.95);
+opacity: 60%;
+}
+
+.footer-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  color: var(--col-light);
+  font-family: var(--inner-content);
+  font-size: 1.em;
+  
+
+}
+
+img {
+  width:200px;
+  max-width: 100%;
+  flex-basis: 40%;
+  margin-right: 10px;
+  border-radius: 7px;
+}
+
+.spacing{
+  margin-right:14px;
+}
+
+button{
+  font-size:15px;
+  padding:0px;
+  border:none;
+  color:blueviolet;
+  margin-bottom:1rem;
+}
+
+button:hover{
+  background-color:#fb8b24;
+  color: black;
+  padding:4px;
+  border-radius:10px;
+  
+}
+
+.cartNav{
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  width: 100%;
+  align-items: center;
+  background-color:gainsboro;
+ cursor:pointer;
+ box-shadow: 0px 1px 8px 1px rgba(0,0,0,1);
+ 
+}
+
+.cartNav div{
+  border: none;
+  border-radius:10px;
+  padding: 1rem;
+  transition: all 0.3s;
+}
+
+.cartNav div:hover{
+  background-color: #f8f8f8;
+}
+
+a {
+  text-decoration: none !important;
+  color: brown;
+}
+
+a:hover{
+  text-decoration:underline !important;;
+  
+}
+
+.login{
+border-style: inset;
+padding-top:6rem;
+background-color: #edf2f4;
+}
+
+.form>input{
+border-radius:5px;
+margin-left:16px;
+padding:15px;
+}
+
+.signupform>input{
+  position: absolute;
+  left: 35%;
+  padding: 6px;
+  border-radius:15px;
+  
+}
+
+
+
+.submit:hover{
+background-color: aqua;
+border:none;
+
+}
+
+
+.disable{ 
+  pointer-events: none; 
+  background-color:#ada397;
 }
