--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,23 @@ img {
 }
 
 
+.rentalsbtn{
+  font-size:15px;
+  padding:0px;
+  border:none;
+  font-weight: 800;
+  font-style: italic;
+  margin-bottom:1rem; 
+}
+
+.rentalsbtn:hover{
+  background-color:#fb8b24; 
+  padding:4px;
+  border-radius:10px;
+  
+}
+
+
 .update:hover{
   background-color:#fb8b24;
   color: black;
