--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ background-color: #fb8b24;
   display:flex;
   flex-wrap:wrap;
   justify-content:space-around;
+  margin-bottom: 5rem;
   
 
 }
@@ -117,20 +118,25 @@ opacity: 60%;
 
 .footer-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content:space-around;
   align-items: center;
   background-color: rgb(255, 255, 255);
   width: 100%;
   height: 20px;
   position: fixed;
+  padding:2rem;
+  margin-top:30rem;
   bottom: 0;
   left: 0;
   color: var(--col-light);
   font-family: var(--inner-content);
-  font-size: 1.em;
-  
+  font-size: 2.em;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,1);
 
+  
 }
+
+
 
 img {
   width:200px;
@@ -206,6 +212,9 @@ img {
  box-shadow: 0px 1px 8px 1px rgba(0,0,0,1);
  
 }
+
+
+
 
 #hover1{
   margin-top:"2rem";
