--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,13 @@ img {
   background-color: #f8f8f8;
 }
 
+button #btnupdate{
+  border:"none";
+  padding:"16px";
+  border-radius:"15px";
+  margin:1rem
+}
+
 a {
   text-decoration: none !important;
   color: brown;
