--- a/src/index.css
+++ b/src/index.css
@@ -135,8 +135,8 @@ opacity: 60%;
   left: 0;
   color: var(--col-light);
   font-family: var(--inner-content);
-  font-size: 2.em;
-  box-shadow: 0px 1px 8px 1px rgba(0,0,0,1);
+  font-size: 1rem;
+  box-shadow: 0px 1px 8px 1px rgba(0,0,0,1)
 
   
 }
